# handler/user-handler.go
@@ -21,19 +21,19 @@ func NewUserHandler(service service.UserService) *UserHandler {
 	}
 }
 
-// Login godoc
-// @Summary Provole
-// @Description Provole
-// @Tags auth
+// Profile godoc
+// @Summary Profile user
+// @Description Profile user
+// @Tags accounts
 // @Accept  json
 // @Produce  json
-// @param register body LoginDTO true "request body login"
-// @Success 200 {object} LoginResponseDOC
-// @Failure 400 {object} res.ErrorResponse
-// @Failure 404 {object} res.ErrorResponse
-// @Failure 500 {object} res.ErrorResponse
-// @Router /auth/login [post]
-
+// @Security  Bearer
+// @Security   JWT
+// @Success 200 {object} helper.Response
+// @Failure 400 {object} helper.Response
+// @Failure 401 {object} helper.Response
+// @Failure 500 {object} helper.Response
+// @Router /profile [get]
 func (handler *UserHandler) Profile(ctx echo.Context) (err error) {
 	// c.Request().Header
 	var userDTO dto.UserDTO
